--- a/src/ApplicationBase/App.scss
+++ b/src/ApplicationBase/App.scss
@@ -1,3 +1,12 @@
  * {
-   font-family: Raleway, sans-serif;
+  font-family: Raleway, sans-serif;
+  font-size: 1.2rem;
  }
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 1.8rem;
+}
