--- a/src/ApplicationBase/App.scss
+++ b/src/ApplicationBase/App.scss
@@ -3,10 +3,7 @@
   font-size: 1.2rem;
  }
 
-h1 {
-  font-size: 2.5rem;
-}
-
-h2 {
-  font-size: 1.8rem;
-}
+h1 { font-size: 2.5rem; }
+h2 { font-size: 2.1rem; }
+h3 { font-size: 1.7rem; }
+h4 { font-size: 1.3rem; }
